# SafeChess

./: .coverage  .env  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
context/: development environment.md  project scope.md  project set up.md  spikes.md
spikes/: cli_spike_290525.ipynb  engine_spike_290525.ipynb  fen_score_generator_spike_290525.ipynb  mock_engine_testing_stub_spike_290525.ipynb  multiproc_spike.ipynb  pgn_loader_spike_290525.ipynb  simple_caching_spike_290525.ipynb  sqlite_schema_and_writepath_spike_290525.ipynb  threshold_sweep_spike_290525.ipynb
spikes/MockEngine/: mock_engine.py  test_mock_engine.py
spikes/data/: example_pgn_1.pgn  opening_positions.csv  sensitivity.csv
spikes/key libraries/: click.ipynb  python_chess.ipynb  shelve.ipynb
src/safechess/: __init__.py  engine.py  instability.py
src/safechess.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/safechess/db/: cache.py
tests/analysis/: test_instability_metric_desolate.py  test_instability_metric_forgetful.py  test_instability_metric_greedy.py  test_instability_metric_happy.py  test_instability_metric_indecisive.py  test_instability_metric_sad.py  test_instability_metric_scary.py
tests/engine/: test_engine_api.py
