# pyproject.toml ─ SafeChess
############################################
[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

############################################
[project]
name            = "safechess"
version         = "0.1.0"
description     = "Analyse the instability (risk) of engine-preferred opening moves in chess."
readme          = "README.md"
requires-python = ">=3.12"
license         = { file = "LICENSE" }

authors = [
  { name = "Richard Strange", email = "richardpstrange@outlook.com" }
]

# --- runtime dependencies (MVP) ---
dependencies = [
  "python-chess>=1.9.0",
  "stockfish>=0.13.2",
  "click>=8.0.0",
  "PyYAML>=6.0",
  "toml>=0.10.2",
  "pandas>=2.0.0",
  "cachetools>=5.3.0",
  "tqdm>=4.64.0",
  "matplotlib>=3.6.0",
  "jupyter>=1.0.0"
]

# --- optional / extra groups ---
[project.optional-dependencies]
dev  = [
  "pytest>=7.2.0",
  "pytest-cov>=4.0.0",
  "black>=23.3.0",
  "isort>=5.12.0",
  "flake8>=6.0.0",
  "mypy>=0.991",
  "pre-commit>=2.20.0",
  "tox>=3.27.0"
]
docs = ["sphinx>=7", "myst-parser>=2"]

[project.urls]
Homepage      = "https://github.com/R-Strange/safechess"
Documentation = "https://safechess.readthedocs.io"
Issues        = "https://github.com/R-Strange/safechess/issues"

# Tell setuptools to look in ./src for packages
[tool.setuptools.packages.find]
where = ["src"]

############################################
# Formatting & linting tools
[tool.black]
line-length     = 88
target-version  = ["py311"]

[tool.isort]
profile         = "black"
src_paths       = ["src", "tests"]

[tool.mypy]
python_version  = "3.12"
files           = ["src"]
strict          = true

############################################
# Pytest defaults (unit only; integrations need -m integration)
[tool.pytest.ini_options]
addopts  = "-q -m 'not integration'"
testpaths = ["tests"]

############################################
# Coverage (optional but handy)
[tool.coverage.run]
source = ["safechess"]
